--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>uapost</servlet-name>
-        <url-pattern>/welcome.jsp</url-pattern>
+        <url-pattern>/example</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
