--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.3</version>
     </dependency>
+
+    <dependency>
+      <groupId>net.snaq</groupId>
+      <artifactId>dbpool</artifactId>
+      <version>7.0</version>
+    </dependency>
+
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
