--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,15 @@
         <version>3.3</version>
         <configuration>
           <source>1.8</source>
-          <target>1.8</target>
+          <target>1.7</target>
         </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <version>2.6</version>
         <configuration>
+        <outputDirectory>webapps</outputDirectory>
+        <warName>ROOT</warName>
           <webResources>
             <resource>
               <!-- this is relative to the pom.xml directory -->
@@ -43,13 +45,7 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.3</version>
-    </dependency>
-
-    <dependency>
-      <groupId>net.snaq</groupId>
-      <artifactId>dbpool</artifactId>
-      <version>7.0</version>
+      <version>5.1.25</version>
     </dependency>
 
     <dependency>
@@ -79,19 +75,25 @@
       <artifactId>spring-web</artifactId>
       <version>4.2.5.RELEASE</version>
     </dependency>
-
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
-
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
       <version>1.1.3</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.21</version>
+    </dependency>
+
   </dependencies>
+
 
 
 
