--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>2.6</version>
         <configuration>
-        <outputDirectory>webapps</outputDirectory>
-        <warName>ROOT</warName>
+          <outputDirectory>webapps</outputDirectory>
+          <warName>ROOT</warName>
           <webResources>
             <resource>
               <!-- this is relative to the pom.xml directory -->
@@ -42,6 +42,7 @@
       <artifactId>jersey-container-servlet</artifactId>
       <version>2.22.2</version>
     </dependency>
+
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
@@ -90,6 +91,12 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.21</version>
+    </dependency>
+
+    <dependency>
+      <groupId>net.snaq</groupId>
+      <artifactId>dbpool</artifactId>
+      <version>7.0</version>
     </dependency>
 
   </dependencies>
