--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>2.6</version>
         <configuration>
-          <outputDirectory>webapps</outputDirectory>
+<!--           <outputDirectory>webapps</outputDirectory> -->
           <warName>ROOT</warName>
           <webResources>
             <resource>
