--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>2.6</version>
         <configuration>
-<!--           <outputDirectory>webapps</outputDirectory> -->
+          <!-- <outputDirectory>webapps</outputDirectory> -->
           <warName>ROOT</warName>
           <webResources>
             <resource>
@@ -92,15 +92,27 @@
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.21</version>
     </dependency>
-
-    <dependency>
-      <groupId>net.snaq</groupId>
-      <artifactId>dbpool</artifactId>
-      <version>7.0</version>
-    </dependency>
-
   </dependencies>
 
+  <profiles>
+    <profile>
+      <id>localhost</id>
+      <activation>
+       <activeByDefault>true</activeByDefault>
+     </activation>
+      <dependencies>
+        <dependency>
+          <groupId>net.snaq</groupId>
+          <artifactId>dbpool</artifactId>
+          <version>7.0</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    
+    <profile>
+      <id>openshift</id>
+    </profile>
+  </profiles>
 
 
 
