--- a/pom.xml
+++ b/pom.xml
@@ -8,33 +8,6 @@
   <name>UAPostcodes</name>
   <description>Ukrainian postcodes</description>
 
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>2.6</version>
-        <configuration>
-          <!-- <outputDirectory>webapps</outputDirectory> -->
-          <warName>ROOT</warName>
-          <webResources>
-            <resource>
-              <!-- this is relative to the pom.xml directory -->
-              <directory>src/main/webapp/resources</directory>
-            </resource>
-          </webResources>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
   <dependencies>
     <!-- JAX-RS RESTful Web Services -->
     <dependency>
@@ -98,8 +71,36 @@
     <profile>
       <id>localhost</id>
       <activation>
-       <activeByDefault>true</activeByDefault>
-     </activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.3</version>
+            <configuration>
+              <source>1.8</source>
+              <target>1.8</target>
+            </configuration>
+          </plugin>
+          <plugin>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>2.6</version>
+            <configuration>
+              <!-- <outputDirectory>webapps</outputDirectory> -->
+              <warName>UAPostcodes</warName>
+              <webResources>
+                <resource>
+                  <!-- this is relative to the pom.xml directory -->
+                  <directory>src/main/webapp/resources</directory>
+                </resource>
+              </webResources>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+
       <dependencies>
         <dependency>
           <groupId>net.snaq</groupId>
@@ -108,9 +109,39 @@
         </dependency>
       </dependencies>
     </profile>
-    
+
     <profile>
       <id>openshift</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.3</version>
+            <configuration>
+              <source>1.7</source>
+              <target>1.7</target>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>2.6</version>
+            <configuration>
+              <webResources>
+                <resource>
+                  <!-- this is relative to the pom.xml directory -->
+                  <directory>src/main/webapp/resources</directory>
+                </resource>
+              </webResources>
+              <warSourceExcludes>
+                META-INF/context.xml
+              </warSourceExcludes>
+              <warName>ROOT</warName>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+
     </profile>
   </profiles>
 
