--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,9 @@
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
 
+  <error-page>
+    <exception-type>java.lang.Throwable</exception-type>
+    <location>/error.html</location>
+  </error-page>
+
 </web-app>
