Change logger path and beans order

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,7 +3,6 @@ log4j.rootCategory=INFO,console,rollingFile
 
 #setting your own named logger. If more loggers, set additivity false (below)
 log4j.logger.log4j.level=INFO,console
-#log4j.additivity.log4j.level=false
 
 # console appender config
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -11,16 +10,16 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 # Print the date in ISO 8601 format
 log4j.appender.console.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-log4j.appender.rollingFile = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.rollingFile=org.apache.log4j.DailyRollingFileAppender
 
 #provide path to your location where you want logs created. For now its logs folder of tomcat.
-log4j.appender.rollingFile.File = ${catalina.home}/logs/uapostcodes.log
-log4j.appender.rollingFile.Append = true
-log4j.appender.rollingFile.MaxFileSize=2000KB 
-log4j.appender.rollingFile.MaxBackupIndex=9 
+log4j.appender.rollingFile.File=uapostcodes.log
+log4j.appender.rollingFile.Append=true
+log4j.appender.rollingFile.MaxFileSize=5000KB 
+log4j.appender.rollingFile.MaxBackupIndex=5 
 
-log4j.appender.rollingFile.Threshold = ALL
+log4j.appender.rollingFile.Threshold=ALL
 
-log4j.appender.rollingFile.DatePattern = '.'yyy-MM-dd
-log4j.appender.rollingFile.layout = org.apache.log4j.PatternLayout
-log4j.appender.rollingFile.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss} %c{1} [%p] %m%n
+log4j.appender.rollingFile.DatePattern='.'yyy-MM-dd
+log4j.appender.rollingFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.rollingFile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %c{1} [%p] %m%n
