--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,7 +24,7 @@
   </welcome-file-list>
 
   <error-page>
-    <exception-type>java.lang.Throwable</exception-type>
+    <exception-type>com.pikaso.exceptions.ExampleException</exception-type>
     <location>/error.html</location>
   </error-page>
 
